src/test/ui/suggestions/into-str.stderr
error[E0277]: the trait bound `&str: From<String>` is not satisfied
  --> $DIR/into-str.rs:4:9
   |
LL |     foo(String::new());
   |     --- ^^^^^^^^^^^^^ the trait `From<String>` is not implemented for `&str`
   |     |
   |     required by a bound introduced by this call
   |
   = note: to coerce a `String` into a `&str`, use `&*` as a prefix
   = help: the following implementations were found:
             <String as From<&String>>
             <String as From<&mut str>>
             <String as From<&str>>
             <String as From<Box<str>>>
           and 2 others
   = note: required because of the requirements on the impl of `Into<&str>` for `String`
note: required by a bound in `foo`
  --> $DIR/into-str.rs:1:31
   |
LL | fn foo<'a, T>(_t: T) where T: Into<&'a str> {}
   |                               ^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
